[package]
name = "aws-sso-env"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = "1"
aws-config = "0.2"
aws-sdk-sso = "0.2"
aws-types = "0.2"
dirs = "4"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
openssl = { version = "*", features = ["vendored"] }
sha1 = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

